changed path to correct viral signatures

--- a/sourmash/viral_taxonomy.ipynb
+++ b/sourmash/viral_taxonomy.ipynb
@@ -79,7 +79,7 @@
     "- use scale 100\n",
     "- use scale 1000\n",
     "\n",
-    "For now just use a bp treshold of 0, can always adjust later"
+    "For now just use a bp treshold of 0, can always adjust later. maybe use csvtk to subset results, or python"
    ]
   },
   {
@@ -101,7 +101,7 @@
     "ln -s /home/ntpierce/2023-spillover/output.vmr/vmr_MSL38_v1.dna.k21.zip\n",
     "\n",
     "# do srun\n",
-    "srun --account=ctbrowngrp -p med2 -J fmg_ictv -t 5:00:00 -c 48 --mem=70gb --pty bash\n",
+    "srun --account=ctbrowngrp -p med2 -J fmg_gb -t 5:00:00 -c 48 --mem=70gb --pty bash\n",
     "\n",
     "mamba activate branchwater\n",
     "\n",
@@ -135,13 +135,26 @@
     "sourmash scripts fastmultigather \\\n",
     "../../votu_sigs_s100.txt \\\n",
     "../genbank.2023-05.viral.dna.zip \\\n",
-    "-c 24 -k 21 -t 0 -s 1000\n",
+    "-c 48 -k 21 -t 300 -s 100\n",
     "\n",
     "cd sc1000\n",
     "sourmash scripts fastmultigather \\\n",
     "../../votu_sigs_s100.txt \\\n",
     "../vmr_MSL38_v1.dna.k21.zip \\\n",
     "-c 48 -k 21 -t 0 -s 1000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "ls . | grep 'fullgather' | wc -l"
    ]
   },
   {
@@ -303,7 +316,7 @@
    "source": [
     "# use snakemake file\n",
     "srun --account=ctbrowngrp -p med2 -J fmg -t 12:00:00 -c 30 --mem=60gb --pty bash\n",
-    "snakemake --resources mem_mb=60000 --rerun-triggers mtime -c 30 --rerun-incomplete -k "
+    "snakemake --resources mem_mb=60000 --rerun-triggers mtime -c 30 --rerun-incomplete -k --latency-wait 1\n"
    ]
   }
  ],
