--- a/sourmash/viral_taxonomy.ipynb
+++ b/sourmash/viral_taxonomy.ipynb
@@ -79,7 +79,7 @@
     "- use scale 100\n",
     "- use scale 1000\n",
     "\n",
-    "For now just use a bp treshold of 0, can always adjust later. maybe use csvtk to subset results, or python"
+    "For now just use a bp treshold of 0, can always adjust later. Can subset tax results on bp_match_at_rank"
    ]
   },
   {
@@ -101,7 +101,7 @@
     "ln -s /home/ntpierce/2023-spillover/output.vmr/vmr_MSL38_v1.dna.k21.zip\n",
     "\n",
     "# do srun\n",
-    "srun --account=ctbrowngrp -p med2 -J fmg_gb -t 5:00:00 -c 48 --mem=70gb --pty bash\n",
+    "srun --account=ctbrowngrp -p med2 -J fmg_gb -t 3:00:00 -c 36 --mem=70gb --pty bash\n",
     "\n",
     "mamba activate branchwater\n",
     "\n",
@@ -110,13 +110,7 @@
     "sourmash scripts fastmultigather \\\n",
     "../../votu_sigs_s100.txt \\\n",
     "../vmr_MSL38_v1.dna.k21.zip \\\n",
-    "-c 48 -k 21 -t 0 -s 100\n",
-    "\n",
-    "cd sc1000\n",
-    "sourmash scripts fastmultigather \\\n",
-    "../../votu_sigs_s100.txt \\\n",
-    "../vmr_MSL38_v1.dna.k21.zip \\\n",
-    "-c 48 -k 21 -t 0 -s 1000"
+    "-c 48 -k 21 -t 0 -s 100\n"
    ]
   },
   {
@@ -131,17 +125,33 @@
    "source": [
     "# genbank\n",
     "# run the fastmultigather\n",
+    "\n",
     "cd sc100\n",
     "sourmash scripts fastmultigather \\\n",
     "../../votu_sigs_s100.txt \\\n",
-    "../genbank.2023-05.viral.dna.zip \\\n",
-    "-c 48 -k 21 -t 300 -s 100\n",
-    "\n",
-    "cd sc1000\n",
-    "sourmash scripts fastmultigather \\\n",
-    "../../votu_sigs_s100.txt \\\n",
     "../vmr_MSL38_v1.dna.k21.zip \\\n",
-    "-c 48 -k 21 -t 0 -s 1000"
+    "-c 48 -k 21 -t 0 -s 100\n",
+    "\n",
+    "\n",
+    "## redo with rocksdb, in the folder where the symlink is\n",
+    "srun --account=ctbrowngrp -p med2 -J fmg_gb -t 6:00:00 -c 4 --mem=100gb --pty bash\n",
+    "mamba activate branchwater\n",
+    "/usr/bin/time -v sourmash scripts fastmultigather \\\n",
+    "votu_sigs_00.txt \\\n",
+    "genbank.2023-05.viral.dna-k21-sc100.rocksdb \\\n",
+    "-c 4 -k 21 -t 300 -s 100 -o votus.x.genbank.csv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Rocksdb taking a lot of mem\n",
+    "- try with a zip instead of a txt file\n",
+    "- use the time command to track amount of mem it needs\n",
+    "\n",
+    "Opened an issue:\n",
+    "https://github.com/sourmash-bio/sourmash_plugin_branchwater/issues/273"
    ]
   },
   {
@@ -154,7 +164,68 @@
    },
    "outputs": [],
    "source": [
-    "ls . | grep 'fullgather' | wc -l"
+    "# split the vOTU sigs into smaller files, maybe that helps\n",
+    "split -l 1000 -d --additional-suffix=.txt ../votu_sigs_s100.txt votu_sigs_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# try rocksdb again, give it like 300GB, increase treshold, no threads param\n",
+    "srun --account=ctbrowngrp -p med2 -J fmg_gb -t 24:00:00 -c 4 --mem=300gb --pty bash\n",
+    "\n",
+    "cd /home/ntpierce/2023-spillover/output.genbank-viral/ \n",
+    "mamba activate branchwater\n",
+    "/usr/bin/time -v sourmash scripts fastmultigather \\\n",
+    "/group/ctbrowngrp2/scratch/annie/2023-swine-sra/sourmash/sig_files/signatures_concat/vOTUs.k21.s100.zip \\\n",
+    "genbank.2023-05.viral.dna-k21-sc100.rocksdb -k 21 -s 100 -o \\\n",
+    "/group/ctbrowngrp2/scratch/annie/2023-swine-sra/sourmash/viral_taxonomy/genbank/votus.x.genbank.csv -t 1000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "srun --account=ctbrowngrp -p med2 -J fmg_gb -t 1:00:00 -c 4 --mem=50gb --pty bash\n",
+    "\n",
+    "# concat all sigs to a zip\n",
+    "sourmash sig cat *.sig.gz -o ../signatures_concat/vOTUs.k21.s100.zip\n",
+    "\n",
+    "# symlink\n",
+    "ln -s ../../sig_files/signatures_concat/vOTUs.k21.s100.zip .\n",
+    "\n",
+    "# use these\n",
+    "mamba activate branchwater\n",
+    "for f in /group/ctbrowngrp2/scratch/annie/2023-swine-sra/sourmash/viral_taxonomy/genbank/votu_sigs_00.txt\n",
+    "do\n",
+    "echo $f\n",
+    "sourmash scripts fastmultigather \\\n",
+    "$f \\\n",
+    "genbank.2023-05.viral.dna-k21-sc100.rocksdb \\\n",
+    "-c 4 -k 21 -t 1000 -s 100 \\\n",
+    "-o /group/ctbrowngrp2/scratch/annie/2023-swine-sra/sourmash/viral_taxonomy/genbank/votu_sigs_00.x.genbank.csv\n",
+    "done\n",
+    "\n",
+    "\n",
+    "/usr/bin/time -v sourmash scripts fastmultigather \\\n",
+    "/group/ctbrowngrp2/scratch/annie/2023-swine-sra/sourmash/viral_taxonomy/genbank/votu_sigs_00.txt \\\n",
+    "genbank.2023-05.viral.dna-k21-sc100.rocksdb -c 4 -k 21 -s 100 -o \\\n",
+    "/group/ctbrowngrp2/scratch/annie/2023-swine-sra/sourmash/viral_taxonomy/genbank/votus.x.genbank.csv -t 1000\n",
+    "\n",
+    "/usr/bin/time -v "
    ]
   },
   {
@@ -175,9 +246,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Rocksdb not working:\n",
-    "- For the genbank one: Error: Invalid argument: Column family not found: metadata\n",
-    "- For the ictv one: Error: No such file or directory (os error 2)"
+    "## For using a rocksdb:\n",
+    "- Symlink the rocksdb directly to the folder youre running fmg in\n",
+    "- Or run the command from the folder that the rocksdb lives in \n"
    ]
   },
   {
@@ -272,12 +343,12 @@
     "ln -s /group/jbemersogrp/databases/genomad/genomad_db .\n",
     "\n",
     "# srun it, needs quite some mem\n",
-    "srun --account=ctbrowngrp -p bmm -J genomad -t 64:00:00 -c 8 --mem=100gb --pty bash\n",
+    "srun --account=ctbrowngrp -p bmm -J genomad -t 1:00:00 -c 6 --mem=20gb --pty bash\n",
     "\n",
     "# end to end for everything, need to annotate for classification\n",
     "mamba activate genomad\n",
-    "genomad end-to-end --threads 8 --enable-score-calibration \\\n",
-    "240214_allvOTUs_highq.fa genomad_out genomad_db --splits 3\n",
+    "genomad end-to-end --threads 6 --enable-score-calibration \\\n",
+    "200bp.fa genomad_out_200bp genomad_db --splits 3\n",
     "\n"
    ]
   },
@@ -315,8 +386,8 @@
    "outputs": [],
    "source": [
     "# use snakemake file\n",
-    "srun --account=ctbrowngrp -p med2 -J fmg -t 12:00:00 -c 30 --mem=60gb --pty bash\n",
-    "snakemake --resources mem_mb=60000 --rerun-triggers mtime -c 30 --rerun-incomplete -k --latency-wait 1\n"
+    "srun --account=ctbrowngrp -p high2 -J fmg -t 12:00:00 -c 48 --mem=60gb --pty bash\n",
+    "snakemake --resources mem_mb=60000 --rerun-triggers mtime -c 48 --rerun-incomplete -k --latency-wait 1\n"
    ]
   }
  ],
