--- a/sourmash/viral_taxonomy.ipynb
+++ b/sourmash/viral_taxonomy.ipynb
@@ -61,7 +61,7 @@
     "\n",
     "# genbank db and taxonomy file:\n",
     "/home/ntpierce/2023-spillover/output.genbank-viral/genbank.2023-05.viral.dna.zip\n",
-    "/group/ctbrowngrp/sourmash-db/genbank-2022.03/genbank-2022.03-viral.lineages.csv.gz\n",
+    "/home/ntpierce/database-releases/genbank-2023.05/viral.lineages.csv\n",
     "\n",
     "# ICTV dbs and tax file\n",
     "/home/ntpierce/2023-spillover/output.vmr/\n",
@@ -186,7 +186,34 @@
     "/usr/bin/time -v sourmash scripts fastmultigather \\\n",
     "/group/ctbrowngrp2/scratch/annie/2023-swine-sra/sourmash/sig_files/signatures_concat/vOTUs.k21.s100.zip \\\n",
     "genbank.2023-05.viral.dna-k21-sc100.rocksdb -k 21 -s 100 -o \\\n",
-    "/group/ctbrowngrp2/scratch/annie/2023-swine-sra/sourmash/viral_taxonomy/genbank/votus.x.genbank.csv -t 1000"
+    "/group/ctbrowngrp2/scratch/annie/2023-swine-sra/sourmash/viral_taxonomy/genbank/votus.x.genbank.csv -t 300"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# for against a protein db we will need protein predictions\n",
+    "srun --account=ctbrowngrp -p bmm -J prodigal -t 3:00:00 -c 1 --mem=30gb --pty bash\n",
+    "# in ./virsorter2/\n",
+    "mamba activate prodigal\n",
+    "for f in *.fa\n",
+    "do \n",
+    "prodigal -i $f -a ../../vOTUs_prot/${f%.fa*}.faa -p meta -q\n",
+    "done\n",
+    "\n",
+    "# Then sourmash sketch the files at k=10, scaled=100\n",
+    "for f in *.faa\n",
+    "do\n",
+    "sourmash sketch protein -p k=7,scaled=100,noabund $f \\\n",
+    "-o ../../sourmash/sig_files/prot_sketches/$f.k7.zip\n",
+    "done"
    ]
   },
   {
