--- a/sourmash/viral_taxonomy.ipynb
+++ b/sourmash/viral_taxonomy.ipynb
@@ -179,7 +179,7 @@
    "outputs": [],
    "source": [
     "# try rocksdb again, give it like 300GB, increase treshold, no threads param\n",
-    "srun --account=ctbrowngrp -p med2 -J fmg_gb -t 24:00:00 -c 4 --mem=300gb --pty bash\n",
+    "srun --account=ctbrowngrp -p high2 -J fmg_gb -t 24:00:00 -c 4 --mem=300gb --pty bash\n",
     "\n",
     "cd /home/ntpierce/2023-spillover/output.genbank-viral/ \n",
     "mamba activate branchwater\n",
@@ -200,7 +200,7 @@
    "outputs": [],
    "source": [
     "# for against a protein db we will need protein predictions\n",
-    "srun --account=ctbrowngrp -p bmm -J prodigal -t 3:00:00 -c 1 --mem=30gb --pty bash\n",
+    "srun --account=ctbrowngrp -p bmm -J prodigal -t 3:00:00 -c 24 --mem=30gb --pty bash\n",
     "# in ./virsorter2/\n",
     "mamba activate prodigal\n",
     "for f in *.fa\n",
@@ -211,9 +211,19 @@
     "# Then sourmash sketch the files at k=10, scaled=100\n",
     "for f in *.faa\n",
     "do\n",
-    "sourmash sketch protein -p k=7,scaled=100,noabund $f \\\n",
-    "-o ../../sourmash/sig_files/prot_sketches/$f.k7.zip\n",
-    "done"
+    "sourmash sketch protein -p k=7,scaled=100,noabund,k=10,scaled=100,noabund $f \\\n",
+    "-o ../prot_sketches/votus/${f%.faa*}.sig.gz\n",
+    "done\n",
+    "\n",
+    "\n",
+    "module load parallel\n",
+    "mamba activate branchwater\n",
+    "\n",
+    "for f in *.faa\n",
+    "do\n",
+    "echo sourmash sketch protein -p k=7,scaled=100,noabund,k=10,scaled=100,noabund $f \\\n",
+    "--name ${f%.faa*} -o ../prot_sketches/votus/${f%.faa*}.sig.gz\n",
+    "done | parallel -j 24"
    ]
   },
   {
@@ -413,8 +423,8 @@
    "outputs": [],
    "source": [
     "# use snakemake file\n",
-    "srun --account=ctbrowngrp -p high2 -J fmg -t 12:00:00 -c 48 --mem=60gb --pty bash\n",
-    "snakemake --resources mem_mb=60000 --rerun-triggers mtime -c 48 --rerun-incomplete -k --latency-wait 1\n"
+    "srun --account=ctbrowngrp -p med2 -J gathertax -t 5:00:00 -c 48 --mem=40gb --pty bash\n",
+    "snakemake --resources mem_mb=40000 --rerun-triggers mtime -c 48 --rerun-incomplete -k --latency-wait 1\n"
    ]
   }
  ],
