--- a/workflow/notebooks/viral_workflow.ipynb
+++ b/workflow/notebooks/viral_workflow.ipynb
@@ -5,14 +5,36 @@
    "metadata": {},
    "source": [
     "### Make separate snakefile to process viruses\n",
-    "- After atlas already done: contigs present. Can run virsorter2 on these\n",
-    "- Need to make a snakefile for this\n",
-    "- 236 fa files still need to go through vs2 (is ok)\n",
+    "- After atlas already done: contigs present. \n",
+    "- Run genomad: get plasmids and viruses\n",
     "\n",
-    "Just make 2: One for running virsorter, then one for moving the files. And renaming.\n",
-    "Viral taxonomy? With sourmash?\n",
+    "We have for viruses and plasmids: \n",
+    "- predicted genes (can make a phylo tree from the TerL if needed..)\n",
+    "- the contigs and proteins\n",
     "\n",
-    "Do we want to use genomad instead? bc plasmids. "
+    "Concatenate all plasmids and all viruses\n",
+    "- drep them, probably at 95% for viruses, and 99% for plasmids? Can do 99 for both. \n",
+    "- Figure out what plasmid ones are also in MAGs. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# genomad done!!\n",
+    "# I think we want to keep plasmids and viruses with a score > 0.9\n",
+    "# rename contigs, then concatenate\n",
+    "\n",
+    "\n",
+    "# cat all the score things too\n",
+    "csvtk concat -t */*_contigs_summary/*_contigs_plasmid_summary.tsv \\\n",
+    "> /group/ctbrowngrp2/amhorst/2025-pigparadigm/results/plasmids/250417_plasmid_summary.tsv\n",
+    "\n",
+    "csvtk concat -t */*_contigs_summary/*_contigs_virus_summary.tsv \\\n",
+    "> /group/ctbrowngrp2/amhorst/2025-pigparadigm/results/viral/250417_viral_summary.tsv\n",
+    "\n"
    ]
   },
   {
@@ -35,7 +57,7 @@
    "source": [
     "#GENOMAD\n",
     "# srun it, needs quite some mem\n",
-    "srun --account=ctbrowngrp -p med2 -J genomad -t 12:00:00 -c 36 --mem=100gb --pty bash\n",
+    "srun --account=ctbrowngrp -p med2 -J rename -t 1:00:00 -c 30 --mem=40gb --pty bash\n",
     "\n",
     "# end to end for everything, need to annotate for classification\n",
     "# Use for taxonomy of DNA phage\n",
@@ -46,14 +68,27 @@
     "/home/amhorst/databases/genomad/genomad_db\n",
     "\n",
     "# running \n",
-    "srun --account=ctbrowngrp -p high2 -J gmd -t 24:00:00 -c 120 --mem=100gb --pty bash\n",
+    "srun --account=ctbrowngrp -p high2 -J gmd -t 12:00:00 -c 120 --mem=100gb --pty bash\n",
+    "mamba activate branchwater-skipmer\n",
+    "\n",
+    "srun --account=ctbrowngrp -p high2 -J gmd -t 1:00:00 -c 25 --mem=20gb --pty bash\n",
     "mamba activate branchwater-skipmer\n",
     "\n",
     "snakemake \\\n",
     "-s genomad.smk \\\n",
     "--rerun-triggers mtime --rerun-incomplete \\\n",
-    "--resources mem_mb=100000 -c 120 --use-conda \\\n",
+    "--resources mem_mb=20000 -c 25 --use-conda \\\n",
     "-k -n\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# without contigs:\n",
+    "SRR11183349"
    ]
   },
   {
